--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,10 +61,19 @@ body {
     background-color: aqua;
 }
 
-.book {
-    background-color:blueviolet;
+#template {
+    display:none;
 }
 
-iframe {
-    display: none;
+.book {
+    background-color:rgb(171, 128, 223);
+}
+
+.bin {
+    margin: 5px;
+    height: 50px;
+    width: 50px;
+    border: none;
+    background: url(images/deletebutton.png) no-repeat;
+    background-size: cover;
 }
