--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,10 @@
 body {
     margin: 0;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-size: 24px;
+    letter-spacing: -0.6px;
+    word-spacing: 3.8px;
+    color: #000000;
 }
 
 @supports not (display: grid) {
@@ -11,29 +16,35 @@ body {
 
 #site {
     display: grid;
-    gap: 20px;
+    height: 100vh;
     grid-template-areas:
-    "header"
     "sidebar"
     "main"
     "footer"
 }
 
-#library {
-    grid-area: main;
-    background-color: bisque;
-    display: grid;
-    grid-template-columns: 1fr;
+#sidebar {
+
+
 }
 
-@media (min-width: 550px){
+#library {
+    grid-area: main;
+    background: #EBD5B3;
+    background: -moz-linear-gradient(left, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
+    background: -webkit-linear-gradient(left, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
+    background: linear-gradient(to right, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+@media (min-width: 620px){
     #site {
-    height: 100%;
+    height: 100vh;
     gap: 0px;
-    grid-template-columns: 30vw auto;
-    grid-template-rows: 1fr 9fr 1fr;
+    grid-template-columns: 210px auto;
+    grid-template-rows: 9fr 5vh;
     grid-template-areas:
-    "sidebar header"
     "sidebar main"
     "sidebar footer";
     }
@@ -44,21 +55,37 @@ body {
     }
 }
 
+@media (min-width: 1000px){
+  #site {
+  height: 100vh;
+  gap: 0px;
+  grid-template-columns: 210px auto;
+  grid-template-rows: 9fr 5vh;
+  grid-template-areas:
+  "sidebar main"
+  "sidebar footer";
+  }
 
-#masthead {
-    grid-area: header;
-    background-color: blanchedalmond;
+  #library {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
 }
-
 
 #sidebar {
     grid-area: sidebar;
-    background-color: rgb(128, 128, 128);
+    background-color:#b3ebcb;
+    padding: 0.5em;
+    font-variant: small-caps;
+    z-index: 1;
 }
 
 #footer {
     grid-area: footer;
-    background-color: aqua;
+    background: #EBD5B3;
+    background: -moz-linear-gradient(left, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
+    background: -webkit-linear-gradient(left, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
+    background: linear-gradient(to right, #EBD5B3 0%, #CDBDA5 0%, #EBD5B3 100%);
 }
 
 #template {
@@ -66,34 +93,65 @@ body {
 }
 
 .book {
-    background-color:rgb(171, 128, 223);
+    position: relative;
+    background-color:#ebb3df;
+    border-radius: 5px;
+    max-height: 300px;
+    max-width: 400px;
+    margin: 4px;
+    -webkit-box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.45); 
+    box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.35);
+    overflow: hidden;
+}
+
+.content {
+  margin-top: 50%;
+  margin: 5px;
+  
+}
+
+p.title {
+  margin: 5px;
+  padding: 2px;
+  font-variant: small-caps;
+  border-bottom: 1px solid #7d909c;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+  color: 
+}
+
+p.info {
+  margin: 15px;
 }
 
 .bin {
     margin: 5px;
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
     border: none;
     background: url(images/deletebutton.png) no-repeat;
     background-size: cover;
+    float: right;
 }
-/*after
-/* The switch - the box around the slider */
+
+
 .switch {
+    bottom: ;
+    margin: 5px;
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
   }
   
-  /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
   
-  /* The slider */
   .slider {
     position: absolute;
     cursor: pointer;
@@ -119,15 +177,19 @@ body {
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #ec21f3;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px #ec21f3;
   }
   
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+  }
+
+  .form-box {
+    margin: 5px;
   }
